@@ -1,2 +1,0 @@
-usr/include/KF5/kqtquickcharts_version.h
-usr/lib/*/cmake/KQtQuickCharts/
